--- a/Data Analysis/AgriWeather_EDA.ipynb
+++ b/Data Analysis/AgriWeather_EDA.ipynb
@@ -1,26 +1,62 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AgriWeather_EDA\n",
+    "\n",
+    "- ```'../data/Data Collection/AgriWether.ipynb'``` 파일에서 수집한 데이터를 포함하여 EDA하는 파일"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import sys\n",
+    "import os\n",
+    "import time\n",
+    "from glob import glob\n",
+    "from pprint import pprint\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "pd.options.display.float_format = '{:.3f}'.format\n",
     "import matplotlib.pyplot as plt\n",
     "import koreanize_matplotlib\n",
-    "%config InlineBackend.figure_format = 'retina'"
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
+    "# DC\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# about file format\n",
+    "import xmltodict\n",
+    "\n",
+    "\n",
+    "sys.path.append(\"../Import\")\n",
+    "# 'auth' is included in gitignore.\n",
+    "from auth import authkey\n",
+    "from definitions import crop_list, crop_list2\n",
+    "authkey = authkey[\"FmlandWthrInfo_dec\"]\n",
+    "from modul import reduce_mem_usage\n",
+    "\n",
+    "root_path = \"../\"\n",
+    "data_path = f\"{root_path}data/\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 경로 자신에게 맞게 확인\n",
-    "df_gw = pd.read_csv(\"../Data/df_gw.csv')"
+    "# 파일 불러오기"
    ]
   },
   {
@@ -29,28 +65,244 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (3447437415.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/fc/jd4xh9c54w36j4ktc_spsz0m0000gn/T/ipykernel_16619/3447437415.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df_gr = pd.read_csv(\"../Data/df_gr.csv')\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌▣ df_raw.shape\n",
+      "(23368, 9)\n",
+      "\n",
+      "\n",
+      "┌▣ df_raw.info()\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 23368 entries, 0 to 23367\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   YMD                      23368 non-null  object \n",
+      " 1   Crop_Name                23368 non-null  object \n",
+      " 2   DayAvg_Temperature       23368 non-null  float64\n",
+      " 3   DayDiff_Temperature      23368 non-null  float64\n",
+      " 4   DayAvg_RelativeHumidity  23368 non-null  float64\n",
+      " 5   DaySum_Rainfall          23368 non-null  float64\n",
+      " 6   DayAvg_WindSpeed         23368 non-null  float64\n",
+      " 7   DaySum_Sunshine          23368 non-null  float64\n",
+      " 8   Warning_Count            23368 non-null  float64\n",
+      "dtypes: float64(7), object(2)\n",
+      "memory usage: 1.6+ MB\n",
+      "None\n",
+      "\n",
+      "\n",
+      "┌▣ df_raw.head()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YMD</th>\n",
+       "      <th>Crop_Name</th>\n",
+       "      <th>DayAvg_Temperature</th>\n",
+       "      <th>DayDiff_Temperature</th>\n",
+       "      <th>DayAvg_RelativeHumidity</th>\n",
+       "      <th>DaySum_Rainfall</th>\n",
+       "      <th>DayAvg_WindSpeed</th>\n",
+       "      <th>DaySum_Sunshine</th>\n",
+       "      <th>Warning_Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>감자</td>\n",
+       "      <td>-3.750</td>\n",
+       "      <td>9.250</td>\n",
+       "      <td>44.000</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>2.250</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>고구마</td>\n",
+       "      <td>-3.000</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>깻잎</td>\n",
+       "      <td>-3.500</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>29.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>마늘</td>\n",
+       "      <td>-1.200</td>\n",
+       "      <td>7.200</td>\n",
+       "      <td>31.400</td>\n",
+       "      <td>1.400</td>\n",
+       "      <td>2.200</td>\n",
+       "      <td>2.800</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-01-02</td>\n",
+       "      <td>감자</td>\n",
+       "      <td>-0.250</td>\n",
+       "      <td>10.750</td>\n",
+       "      <td>48.250</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.750</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          YMD Crop_Name  DayAvg_Temperature  DayDiff_Temperature  \\\n",
+       "0  2005-01-01        감자              -3.750                9.250   \n",
+       "1  2005-01-01       고구마              -3.000                8.000   \n",
+       "2  2005-01-01        깻잎              -3.500                8.000   \n",
+       "3  2005-01-01        마늘              -1.200                7.200   \n",
+       "4  2005-01-02        감자              -0.250               10.750   \n",
+       "\n",
+       "   DayAvg_RelativeHumidity  DaySum_Rainfall  DayAvg_WindSpeed  \\\n",
+       "0                   44.000            0.750             2.250   \n",
+       "1                    0.000            0.000             2.000   \n",
+       "2                   29.000            0.000             1.500   \n",
+       "3                   31.400            1.400             2.200   \n",
+       "4                   48.250            0.000             1.750   \n",
+       "\n",
+       "   DaySum_Sunshine  Warning_Count  \n",
+       "0            3.500          0.000  \n",
+       "1            0.000          0.000  \n",
+       "2            4.000          0.000  \n",
+       "3            2.800          0.000  \n",
+       "4            0.500          0.000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_raw = pd.read_csv(f\"{data_path}AgriWeather.csv\")\n",
+    "\n",
+    "print(\"┌▣ df_raw.shape\")\n",
+    "print(df_raw.shape)\n",
+    "\n",
+    "print(\"\\n\\n┌▣ df_raw.info()\")\n",
+    "print(df_raw.info())\n",
+    "\n",
+    "print(\"\\n\\n┌▣ df_raw.head()\")\n",
+    "display(df_raw.head())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 단변량 비시각화 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mem. usage decreased to  0.67 Mb (58.3% reduction)\n",
+      "(23368, 9)\n"
      ]
     }
    ],
    "source": [
-    "df_gr = pd.read_csv(\"../Data/df_gr.csv')"
+    "# 분석할 데이터 할당\n",
+    "df = df_raw.copy()\n",
+    "df = reduce_mem_usage(df)\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 23368 entries, 0 to 23367\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   YMD                      23368 non-null  object \n",
+      " 1   Crop_Name                23368 non-null  object \n",
+      " 2   DayAvg_Temperature       23368 non-null  float16\n",
+      " 3   DayDiff_Temperature      23368 non-null  float16\n",
+      " 4   DayAvg_RelativeHumidity  23368 non-null  float16\n",
+      " 5   DaySum_Rainfall          23368 non-null  float16\n",
+      " 6   DayAvg_WindSpeed         23368 non-null  float16\n",
+      " 7   DaySum_Sunshine          23368 non-null  float16\n",
+      " 8   Warning_Count            23368 non-null  float16\n",
+      "dtypes: float16(7), object(2)\n",
+      "memory usage: 684.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 시각화 (연도별)"
+    "# 함수 구현"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,28 +320,28 @@
     "    if product not in product_w:\n",
     "        print('해당 제품의 도매 거래내역이 없습니다.')\n",
     "    \n",
-    "    elif ((min(df_gw[df_gw['Product']==product]['Y']) > end) | (max(df_gw[df_gw['Product']==product]['Y']) < start)):\n",
+    "    elif ((min(df_w[df_w['Product']==product]['Y']) > end) | (max(df_w[df_w['Product']==product]['Y']) < start)):\n",
     "        print('해당 일자에 제품의 도매 거래내역이 없습니다.')  \n",
     "    \n",
     "    else:\n",
-    "        df_gw[(df_gw['Product']==product) & (df_gw['Y'] >= start) & (df_gw['Y'] <= end)].groupby(['YMD'])[['Price']].mean().plot(figsize=(20,8))\n",
+    "        df_w[(df_w['Product']==product) & (df_w['Y'] >= start) & (df_w['Y'] <= end)].groupby(['YMD'])[['Price']].mean().plot(figsize=(20,8))\n",
     "        plt.title(f'{product} {start}~{end}년 도매가격 변동 그래프', fontsize=20)\n",
     "\n",
     "    \n",
     "    if product not in product_r:\n",
     "        print('해당 제품의 소매 거래내역이 없습니다.')\n",
     "    \n",
-    "    elif ((min(df_gr[df_gr['Product']==product]['Y']) > end) | (max(df_gr[df_gr['Product']==product]['Y']) < start)):\n",
+    "    elif ((min(df_r[df_r['Product']==product]['Y']) > end) | (max(df_r[df_r['Product']==product]['Y']) < start)):\n",
     "        print('해당 일자에 제품의 소매 거래내역이 없습니다.')\n",
     "        \n",
     "    else:\n",
-    "        df_gr[(df_gr['Product']==product) & (df_gr['Y'] >= start) & (df_gr['Y'] <= end)].groupby(['YMD'])[['Price']].mean().plot(figsize=(20,8))\n",
+    "        df_r[(df_r['Product']==product) & (df_r['Y'] >= start) & (df_r['Y'] <= end)].groupby(['YMD'])[['Price']].mean().plot(figsize=(20,8))\n",
     "        plt.title(f'{product} {start}~{end}년 소매가격 변동 그래프', fontsize=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -131,12 +383,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 시각화 (계절별)"
+    "# 시각화"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -244,20 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": false
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
