--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# AgriWeather.ipynb\n",
     "\n",
-    "- 데이터 중에서 농업기상에 관련된 데이터를 수집하고, 전처리하는 파일\n"
+    "- 데이터 중에서 농업기상에 관련된 데이터를 수집하고, 전처리하는 파일\n",
+    "\n",
+    "- crop_list2에 해당하는 작물 주산지들 평균 농업기상정보 (2005~2020년)\n"
    ]
   },
   {
@@ -56,6 +58,8 @@
     "\n",
     "- 작물명  →  (지역코드(AREA_ID), 작물특성코드(PA_CROP_SPE_ID))  ⇒  FmlandWthrInfo\n",
     "\n",
+    "1. 작물명을 인자로 받아서 [(지역코드, 작물특성코드), ...]의 형태로 반환하는 함수\n",
+    "\n",
     "## 기상청_작물별 농업주산지 상세날씨 조회서비스\n",
     "\n",
     "- 주의사항 : \n",
@@ -81,7 +85,7 @@
     "|페이지 번호|pageNo|4|필수|1|페이지번호|\n",
     "|한 페이지 결과 수|numOfRows|4|필수|10|한 페이지 결과 수|\n",
     "|응답자료형식|dataType|4|옵션|XML|요청자료형식(XML/JSON)|\n",
-    "|시작 연월일|ST_YMD|`0|필수|20161201|일통계 시작 날짜(YYYYMMDD)|\n",
+    "|시작 연월일|ST_YMD|0|필수|20161201|일통계 시작 날짜(YYYYMMDD)|\n",
     "|종료 연월일|ED_YMD|10|필수|20161201|일통계 종료 날짜(YYYYMMDD)|\n",
     "|지역 아이디|AREA_ID|10|필수|4122000000|지역 아이디(활용가이드 하단첨부 참고)|\n",
     "|작물별 특성 아이디|PA_CROP_SPE_ID|10|필수|PA130201|주산지 작물별 특성 아이디(활용가이드 하단첨부 참고)|\n",
@@ -715,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### fnc : 주산지_작물명 -> (지역_아이디, 주산지_작물_특성_아이디)"
+    "### fnc - get_code_list : 주산지_작물명 -> (지역_아이디, 주산지_작물_특성_아이디)"
    ]
   },
   {
