modelling 폴더 생성 경축

--- a/Data Analysis/AgriWeather_EDA.ipynb
+++ b/Data Analysis/AgriWeather_EDA.ipynb
@@ -12,13 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "import time\n",
     "from glob import glob\n",
     "from pprint import pprint\n",
     "import warnings\n",
@@ -32,19 +31,8 @@
     "import koreanize_matplotlib\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
-    "# DC\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "# about file format\n",
-    "import xmltodict\n",
-    "\n",
-    "\n",
     "sys.path.append(\"../Import\")\n",
-    "# 'auth' is included in gitignore.\n",
-    "from auth import authkey\n",
-    "from definitions import crop_list, crop_list2\n",
-    "authkey = authkey[\"FmlandWthrInfo_dec\"]\n",
+    "from definitions import crop_list2\n",
     "from modul import reduce_mem_usage\n",
     "\n",
     "root_path = \"../\"\n",
@@ -294,6 +282,206 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DayAvg_Temperature</th>\n",
+       "      <th>DayDiff_Temperature</th>\n",
+       "      <th>DayAvg_RelativeHumidity</th>\n",
+       "      <th>DaySum_Rainfall</th>\n",
+       "      <th>DayAvg_WindSpeed</th>\n",
+       "      <th>DaySum_Sunshine</th>\n",
+       "      <th>Warning_Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>23368.000</td>\n",
+       "      <td>23368.000</td>\n",
+       "      <td>23368.000</td>\n",
+       "      <td>23368.000</td>\n",
+       "      <td>23368.000</td>\n",
+       "      <td>23368.000</td>\n",
+       "      <td>23368.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1.407</td>\n",
+       "      <td>2.430</td>\n",
+       "      <td>0.142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.570</td>\n",
+       "      <td>3.533</td>\n",
+       "      <td>24.703</td>\n",
+       "      <td>10.539</td>\n",
+       "      <td>0.897</td>\n",
+       "      <td>2.279</td>\n",
+       "      <td>0.291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-12.000</td>\n",
+       "      <td>-4.500</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.000</td>\n",
+       "      <td>7.500</td>\n",
+       "      <td>40.570</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>13.203</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>59.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.200</td>\n",
+       "      <td>2.250</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>21.000</td>\n",
+       "      <td>12.203</td>\n",
+       "      <td>74.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.833</td>\n",
+       "      <td>4.199</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>30.500</td>\n",
+       "      <td>26.000</td>\n",
+       "      <td>100.000</td>\n",
+       "      <td>238.000</td>\n",
+       "      <td>9.000</td>\n",
+       "      <td>9.766</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       DayAvg_Temperature  DayDiff_Temperature  DayAvg_RelativeHumidity  \\\n",
+       "count           23368.000            23368.000                23368.000   \n",
+       "mean                  inf                  inf                      inf   \n",
+       "std                 9.570                3.533                   24.703   \n",
+       "min               -12.000               -4.500                    0.000   \n",
+       "25%                 4.000                7.500                   40.570   \n",
+       "50%                13.203               10.000                   59.000   \n",
+       "75%                21.000               12.203                   74.000   \n",
+       "max                30.500               26.000                  100.000   \n",
+       "\n",
+       "       DaySum_Rainfall  DayAvg_WindSpeed  DaySum_Sunshine  Warning_Count  \n",
+       "count        23368.000         23368.000        23368.000      23368.000  \n",
+       "mean               inf             1.407            2.430          0.142  \n",
+       "std             10.539             0.897            2.279          0.291  \n",
+       "min              0.000             0.000            0.000          0.000  \n",
+       "25%              0.000             1.000            0.000          0.000  \n",
+       "50%              0.000             1.200            2.250          0.000  \n",
+       "75%              1.000             1.833            4.199          0.000  \n",
+       "max            238.000             9.000            9.766          1.000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 결측치"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "YMD                        0\n",
+       "Crop_Name                  0\n",
+       "DayAvg_Temperature         0\n",
+       "DayDiff_Temperature        0\n",
+       "DayAvg_RelativeHumidity    0\n",
+       "DaySum_Rainfall            0\n",
+       "DayAvg_WindSpeed           0\n",
+       "DaySum_Sunshine            0\n",
+       "Warning_Count              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모든 연도의 모든 일자가 나왔는지 확인하기.\n",
+    "\n",
+    "for crop in crop_list2:\n",
+    "    temp = "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -321,7 +509,7 @@
     "        print('해당 제품의 도매 거래내역이 없습니다.')\n",
     "    \n",
     "    elif ((min(df_w[df_w['Product']==product]['Y']) > end) | (max(df_w[df_w['Product']==product]['Y']) < start)):\n",
-    "        print('해당 일자에 제품의 도매 거래내역이 없습니다.')  \n",
+    "        print('해당 일자에 제품의 도매 거래내역이 없습니다.')\n",
     "    \n",
     "    else:\n",
     "        df_w[(df_w['Product']==product) & (df_w['Y'] >= start) & (df_w['Y'] <= end)].groupby(['YMD'])[['Price']].mean().plot(figsize=(20,8))\n",
@@ -496,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
