--- a/Modeling/Wall_Maria.ipynb
+++ b/Modeling/Wall_Maria.ipynb
@@ -66,7 +66,10 @@
     "\n",
     "sys.path.append(\"../Import\")\n",
     "from definitions import crop_list2\n",
-    "from modul import reduce_mem_usage"
+    "from modul import reduce_mem_usage\n",
+    "\n",
+    "root_path = \"../\"\n",
+    "data_path = f\"{root_path}data/\""
    ]
   }
  ],
