--- a/Data Analysis/AgriMarket_EDA_and_Visualisation.ipynb
+++ b/Data Analysis/AgriMarket_EDA_and_Visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class EDA:\n",
+    "\n",
     "    \n",
     "    import numpy as np\n",
     "    import pandas as pd\n",
@@ -45,6 +46,22 @@
     "    import koreanize_matplotlib\n",
     "    %config InlineBackend.figure_format = 'retina'\n",
     "    import seaborn as sns\n",
+    "\n",
+    "\n",
+    "    def __init__(\n",
+    "            self:pd.DataFrame,\n",
+    "            df,\n",
+    "            Product=\"마늘\",\n",
+    "            x=\"Price\",\n",
+    "            y=['환율(원/US$)', '콜금리(연%)', 'item_PPI', 'item_CPI', 'Food Price Index', 'Cereals'],\n",
+    "            ) -> pd.DataFrame:\n",
+    "        \n",
+    "        self.df = df\n",
+    "        self.Product = Product\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        pass\n",
+    "\n",
     "\n",
     "    def print_title(body, br=2, bp=\"┌▣ \", hr=\" ---- ---- ---- ----\"):\n",
     "\n",
@@ -68,7 +85,9 @@
     "\n",
     "        print(\"\\n\" * br + ff.BOLD + bp + ff.UNDERLINE + body + ff.END + hr)\n",
     "\n",
-    "    def Check(df) -> pd.DataFrame:\n",
+    "    def Check(self) -> pd.DataFrame:\n",
+    "\n",
+    "        df = self.df\n",
     "\n",
     "        EDA.print_title(\"\"\"df.shape\"\"\")\n",
     "        print(df.shape)\n",
@@ -79,7 +98,9 @@
     "        EDA.print_title(\"\"\"df.head()\"\"\")\n",
     "        display(df.head())\n",
     "\n",
-    "    def uv(df) -> None:\n",
+    "    def uv(self) -> None:\n",
+    "\n",
+    "        df = self.df.copy()\n",
     "\n",
     "        EDA.print_title(\"\"\"df.describe().T\"\"\")\n",
     "        display(df.describe().T)\n",
@@ -102,7 +123,7 @@
     "        EDA.print_title(\"df.hist()\")\n",
     "        df.hist(bins=100, figsize=(15, 10));\n",
     "\n",
-    "    def mv(df):\n",
+    "    def mv(df) -> None:\n",
     "\n",
     "        df_corr = df.corr()\n",
     "        EDA.print_title(\"\"\"df.corr()\"\"\")\n",
@@ -112,8 +133,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA를 진행할 데이터 불러오고 확인하기."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -281,9 +310,9 @@
     }
    ],
    "source": [
-    "# 경로 자신에게 맞게 확인\n",
-    "df_raw = pd.read_csv(\"../Data/AgriMarket.csv\")\n",
-    "EDA.Check(df_raw)"
+    "df_raw = pd.read_csv(f\"{data_path}AgriMarket.csv\")\n",
+    "eda = EDA(df_raw)\n",
+    "eda.Check()"
    ]
   },
   {
@@ -291,22 +320,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ㅁㄴㅇㄻㄴㅇㄹ"
+    "# 단변량 EDA"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -860,7 +875,7 @@
     }
    ],
    "source": [
-    "col = ['환율(원/US$)','콜금리(연%)', 'item_PPI'\t,'item_CPI',\t'Food Price Index',\t'Cereals']\n",
+    "col = ['환율(원/US$)', '콜금리(연%)', 'item_PPI', 'item_CPI', 'Food Price Index', 'Cereals']\n",
     "df_log1p = df.copy()\n",
     "for i in col:\n",
     "    df_log1p[i] = np.log1p(df[i])\n",
