--- a/Data Collection/Agri_Final.ipynb
+++ b/Data Collection/Agri_Final.ipynb
@@ -2168,10 +2168,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "garlic = garlic.drop(columns='Crop_Name')\n",
-    "Sesame_leaf = Sesame_leaf.drop(columns='Crop_Name')\n",
-    "potato = potato.drop(columns='Crop_Name')\n",
-    "s_potato = s_potato.drop(columns='Crop_Name')"
+    "garlic = garlic.drop(columns=\"Crop_Name\")\n",
+    "Sesame_leaf = Sesame_leaf.drop(columns=\"Crop_Name\")\n",
+    "potato = potato.drop(columns=\"Crop_Name\")\n",
+    "s_potato = s_potato.drop(columns=\"Crop_Name\")\n",
+    "\n",
+    "\n",
+    "dict = {\n",
+    "    \"환율(원/US$)\": \"KRW_USD_EXR\",\n",
+    "    \"콜금리(연%)\": \"Annual_Call_Rate\",\n",
+    "    \"Cereals\": \"Cereals_Price_Index\",\n",
+    "    \"Food Price Index\": \"Food_Price_Index\",\n",
+    "}\n",
+    "garlic = garlic.rename(columns=dict)\n",
+    "Sesame_leaf = Sesame_leaf.rename(columns=dict)\n",
+    "potato = potato.rename(columns=dict)\n",
+    "s_potato = s_potato.rename(columns=dict)"
    ]
   },
   {
