--- a/Data Collection/AgriMarket (1).ipynb
+++ b/Data Collection/AgriMarket (1).ipynb
@@ -5078,7 +5078,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "asd",
    "language": "python",
    "name": "python3"
   },
@@ -5092,7 +5092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:39:05) [MSC v.1929 64 bit (AMD64)]"
   },
   "toc": {
    "base_numbering": 1,
@@ -5109,7 +5109,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "07badbe185019afce09527cdf66b20ec507f3045aabcc27b0da70607b5630dc4"
+    "hash": "1484e195d7bc9430bc3da72ea3c1b8c4a4682e4fe56bdbad8b3e1217f2a75f76"
    }
   }
  },
