--- a/Data Collection/Agri_Final.ipynb
+++ b/Data Collection/Agri_Final.ipynb
@@ -2321,27 +2321,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "garlic.to_csv('garlic.csv')\n",
-    "Sesame_leaf.to_csv('Sesame_leaf.csv')\n",
-    "potato.to_csv('potato.csv')\n",
-    "s_potato.to_csv('s_potato.csv')"
+    "df_final = pd.concat([garlic, Sesame_leaf, potato, s_potato])\n",
+    "df_final.haed()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "garlic.to_csv(f\"{data_path}Agri_garlic.csv\")\n",
+    "Sesame_leaf.to_csv(f\"{data_path}Agri_sesameLeaf.csv\")\n",
+    "potato.to_csv(f\"{data_path}Agri_potato.csv\")\n",
+    "s_potato.to_csv(f\"{data_path}Agri_sweetPotato.csv\")\n",
+    "df_final.to_csv(f\"{data_path}Agri_all.csv\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "asd",
    "language": "python",
    "name": "python3"
   },
@@ -2355,12 +2359,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:39:05) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9d268cb7956bb84fc0274ccbb143d35389b26d51ddaa2a526d5eae67d93f8abb"
+    "hash": "1484e195d7bc9430bc3da72ea3c1b8c4a4682e4fe56bdbad8b3e1217f2a75f76"
    }
   }
  },
