--- a/Data Analysis/AgriMarket_EDA.ipynb
+++ b/Data Analysis/AgriMarket_EDA.ipynb
@@ -1455,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:39:05) [MSC v.1929 64 bit (AMD64)]"
   },
   "toc": {
    "base_numbering": 1,
