--- a/Modeling/prophet_garlic.ipynb
+++ b/Modeling/prophet_garlic.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bacend.ai\n",
+    "# !pip install prophet\n",
+    "# !pip install plotnine"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -56,8 +67,10 @@
     "root_path = \"../\"\n",
     "data_path = f\"{root_path}data/\"\n",
     "# 마늘\n",
+    "Product = \"마늘\"\n",
+    "Product_eng = \"garlic\"\n",
     "Product = crop_list3[0][0]\n",
-    "Product_eng = crop_list3[0][1]"
+    "Product_eng = crop_list3[0][1]\n"
    ]
   },
   {
