--- a/Data Analysis/AgriMarket_EDA.ipynb
+++ b/Data Analysis/AgriMarket_EDA.ipynb
@@ -1441,7 +1441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "asd",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1455,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:39:05) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "toc": {
    "base_numbering": 1,
@@ -1472,7 +1472,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1484e195d7bc9430bc3da72ea3c1b8c4a4682e4fe56bdbad8b3e1217f2a75f76"
+    "hash": "9d268cb7956bb84fc0274ccbb143d35389b26d51ddaa2a526d5eae67d93f8abb"
    }
   }
  },
